@@ -1,3 +1,4 @@
+- Improvement: added a3es instance automatic initialization 
 - Refactor: moved legal settings a3es url to a3es specific configuration 
 
 2.7.1 (16-10-2019)
